# pkg/app.go
@@ -3,12 +3,12 @@ package todo
 //go:generate swag init -g app.go
 import (
 	"context"
-	"os"
 	"time"
 
 	"github.com/labstack/echo/v4"
 	"github.com/labstack/echo/v4/middleware"
 	echoSwagger "github.com/swaggo/echo-swagger"
+	"github.com/whitekid/go-todo/pkg/config"
 	_ "github.com/whitekid/go-todo/pkg/docs" // swagger docs
 	"github.com/whitekid/go-todo/pkg/handlers/auth"
 	"github.com/whitekid/go-todo/pkg/handlers/oauth"
@@ -83,9 +83,9 @@ func (s *todoService) setupRoute() *echo.Echo {
 	todo.New(s.storage).Route(e.Group(""))
 	auth.New(s.storage).Route(e.Group("/auth"))
 	oauth.New(s.storage, oauth.Options{
-		ClientID:     os.Getenv("TODO_CLIENT_ID"),
-		ClientSecret: os.Getenv("TODO_CLIENT_SECRET"),
-		RedirectURL:  os.Getenv("TODO_ROOT_URL") + "/oauth/callback", // TODO configurable redirectURL
+		ClientID:     config.ClientID(),
+		ClientSecret: config.ClientSecret(),
+		RedirectURL:  config.RootURL() + config.CallbackURL(),
 	}).Route(e.Group("/oauth"))
 
 	e.GET("/swagger/*", echoSwagger.WrapHandler)
